--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Welcome to Tinseltown!</h2>
-<p>You are about to embark on a hilarious journey. Choose wisely!</p>
-<a href="{{ url_for('scenario1') }}">Start Your Adventure</a>
+<main class="start-page">
+    <h2>Welcome to Nana Tina's Christmas Adventure!</h2>
+    <p>It was the night before Christmas, and Nana Tina was about to save the day...</p>
+
+    <div class="nan-image">
+        <img src="path/to/nan-image.png" alt="Nana Tina">
+    </div>
+    <a href="/start_page" class="start-button">Start Adventure</a>
+</main>
 {% endblock %}
