--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,6 @@
         <img src="/static/images/santa.png" class="bouncing" alt="Santa">
         <img src="/static/images/reindeer.png" class="bouncing" alt="Elf">
         <img src="/static/images/present.png" class="bouncing" alt="Present">
-        <img src="/static/images/present.png" class="bouncing" alt="Present">
-        <img src="/static/images/reindeer.png" class="bouncing" alt="Elf">
-        <img src="/static/images/santa.png" class="bouncing" alt="Santa">
     </div>
 </header>
 
@@ -33,7 +30,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>© 2024 Made with ❤️</p>
+        <p>© 2024 Made with ❤️ by Alex</p>
     </footer>
 </body>
 </html>
