--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 {% block content %}
 <main class="start-page">
     <h2>Welcome to Nana Tina's Christmas Adventure!</h2>
-    <p>It was the night before Christmas, and Nana Tina was about to save the day...</p>
+    <p class="readable-paragraph">It was the night before Christmas, and Nana Tina was about to save the day...</p>
 
-    <div class="nan-image">
-        <img src="path/to/nan-image.png" alt="Nana Tina">
+    <div class="nan-image-container">
+        <img src="/static/images/placeholder.png" alt="Nana Tina" class="nan-image">
     </div>
-    <a href="/start_page" class="start-button">Start Adventure</a>
+    <a href="/start" class="start-button">Start Adventure</a>
 </main>
 {% endblock %}
