switching out placeholder

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <p class="readable-paragraph">It was the night before Christmas, and Nana Tina was about to save the day...</p>
 
     <div class="nan-image-container">
-        <img src="/static/images/placeholder.png" alt="Nana Tina" class="nan-image">
+        <img src="/static/images/festive-background.jpg" alt="Nana Tina" class="nan-image">
     </div>
     <a href="/start" class="start-button">Start Adventure</a>
 </main>
