--- a/templates/crossword.html
+++ b/templates/crossword.html
@@ -13,14 +13,14 @@
         </p>
     </div>
 
-    <div class="choices">
+    <div class="choices" id="choice-container">
         <button onclick="location.href='/christmas-mystery/confrontation'" class="choice-button">
             Commence the stakeout, waiting to foil Cate's plan
         </button>
         <button onclick="location.href='/christmas-mystery/signatures'" class="choice-button">
             Rush home to collect as many photos of Cate as you can carry for her to sign
         </button>
-        <button onclick="location.href='/christmas-mystery/evil'" class="choice-button">
+        <button onclick="location.href='/christmas-mystery/evilplan'" class="choice-button">
             Join forces with Cate and help steal even more presents
         </button>
     </div>
