--- a/templates/mailbox.html
+++ b/templates/mailbox.html
@@ -13,7 +13,7 @@
         </p>
     </div>
 
-    <div class="choices">
+    <div class="choices" id="choice-container">
         <button onclick="location.href='/christmas-mystery/crossword'" class="choice-button">
             You solve the crossword to reveal Cate's plan!
         </button>
