--- a/templates/mystery.html
+++ b/templates/mystery.html
@@ -20,7 +20,7 @@
         </p>
     </div>
 
-    <div class="choices">
+    <div class="choices" id="choice-container">
         <button onclick="location.href='/christmas-mystery/mailbox'" class="choice-button">
             A tree! You rush to check Chislehurst's largest tree for further clues
         </button>
