--- a/templates/start.html
+++ b/templates/start.html
@@ -15,7 +15,7 @@
         </p>
     </div>
 
-    <div class="choices">
+    <div class="choices" id="choice-container">
         <button onclick="location.href='/christmas-mystery'" class="choice-button">
             You investigate the loud bang, for fear of a Christmas Catastrophe
         </button>
