--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,9 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>© 2024 Made with ❤️ by Alex</p>
+        <p>© 2024 Made with ❤️ by alex</p>
     </footer>
+    <!-- Link the randomizeButtons.js file--->
+    <script src="{{ url_for('static', filename='js/randomizeButtons.js') }}"></script>
 </body>
 </html>
