--- a/templates/confrontation.html
+++ b/templates/confrontation.html
@@ -6,13 +6,17 @@
         Christmas is saved!
     </h1>
     <p class="dead-end-text">
-        While your attempt to save the Christmas  presents initially enraged Cate
+        While your attempt to save the Christmas  presents initially enraged Cate,
         your encyclopaedic knowledge of her works flattered her so much she relented.
-        You spend the rest of Christmas handing back gifts with your new bestie
+        You spend the rest of Christmas handing back gifts with your new bestie and
+        get along so well that she even agrees to making a fleeting appearance at a
+        party you through. (Unfortunately, she is surprisingly camera-shy so stays in
+        the background.)
     </p>
 
     <!-- Optional Image -->
     <img src="/static/images/confrontation.png" alt="Illustration of the ending" class="dead-end-image">
+    <img src="/static/images/nanafriendscate.jpg" alt="Cate at the party" class="dead-end-image">
 
     <!-- Restart Button -->
     <a href="/" class="restart-button">Restart Adventure</a>
