--- a/templates/memories.html
+++ b/templates/memories.html
@@ -11,11 +11,14 @@
             statues in time. Suddenly the ghost turns to you and says:<br>
             "The lines of this play are locked behind a puzzle of history.<br>
             Solve this riddle to restore the memory!"<br><br>
-
+        </p>
+        <div class="riddle-box">
+          <p>
             "I was warned about betrayal, yet I fell for the stab.<br>
             In Rome, they call me a leader; in plays, I am just mad.<br>
-            Who am I?"<br>
-        </p>
+            Who am I?"
+          </p>
+        </div>
     </div>
 
     <!-- Input Box Section -->
