--- a/templates/start.html
+++ b/templates/start.html
@@ -19,7 +19,7 @@
         <button onclick="location.href='/christmas-mystery'" class="choice-button">
             You investigate the loud bang, for fear of a Christmas Catastrophe
         </button>
-        <button onclick="location.href='/christmas-catastrophe'" class="choice-button">
+        <button onclick="location.href='/christmas-cake'" class="choice-button">
             You continue on with in total serenely, your hearing aids not being in
         </button>
         <button onclick="location.href='/christmas-ghost'" class="choice-button">
